fixing namespacing bug

--- a/_sass/_splash.scss
+++ b/_sass/_splash.scss
@@ -1,6 +1,6 @@
 // SECTION ONE: LARGE IMAGE
 
-.splash {
+.splash-section {
   // margin-top: 60px;
   min-height: 300px;
   background-image: url('../assets/petbot1.jpg');
